# 10MBy

./: .gitignore  Cargo.toml  README.md  build.rs
src/: clipboard.rs  compressor.rs  gui.rs  main.rs  registry.rs  setup.rs
